syntax = "proto3";

package CIS.InternalServices.DataAggregatorService;
option csharp_namespace = "CIS.InternalServices.DataAggregatorService.Contracts";

import "google/protobuf/wrappers.proto";
import "Document/InputParameters.proto";
import "Document/DocumentFieldData.proto";

message GetDocumentDataRequest {
	int32 DocumentTypeId = 1;

	google.protobuf.StringValue DocumentVersion = 2;

	InputParameters InputParameters = 3;
}

message GetDocumentDataResponse {
	int32 DocumentTypeId = 1;

	string DocumentVersion = 2;

	InputParameters InputParameters = 3;

	repeated DocumentFieldData DocumentData = 4;
}